Fix spacing and alignment

--- a/src/components/app.css
+++ b/src/components/app.css
@@ -64,7 +64,7 @@ button {
   max-width: 100vw;
   min-height: 60vh;
   max-height: 90vh;
-  justify-content: center;
+
   /* gap: 3vw; */
 }
 
@@ -77,10 +77,6 @@ button {
   padding: 2vw;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  /* width: 50%; */
-  flex: 1;
-  max-width: 40%;
 }
 
 .cardlist--card {
@@ -164,6 +160,7 @@ button {
     overflow: scroll;
     padding: 2vw;
     gap: 10px;
+    max-width: 40%;
   }
   .content--cardsList--card {
     padding: 5px 2px;
